@@ -86,6 +86,7 @@ fixed bugs:
 - fixed bug in heur_subnlp.c where constraints forbidding variable fixations where added if a cutoff was used in the subproblem
 - fixed wrong assert in plugins that use SCIPcopy()
 - fixed wrong (neg)cliquepartition check in cons_knapsack.c when deleting a coefficient
+- fixed memory leak in SoPlex LP interface when requesting an unbounded solution
 
 performance improvements:
 - fasten propagation in cons_knapsack.c due to negated clique partitions
